# zamlbie

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  lol.txt  zamlbie.opam
lib/: client.ml  client_arg.ml  config.ml  dune  effects.ml  game.atd  game.ml  match.ml  message.atd  message.ml  network.ml  rest_client.ml  server.ml  theme.atd  theme.ml  uuid.ml  world.ml  ws_client.ml  ws_client.mli
lib/http/: client.ml  client.mli  dune  raw_client.ml
lib/network/: dune  rest_client.ml
lib/ws/: client.ml  client.mli  dune  raw_client.ml  raw_client.mli
scripts/: README.md  requirements.txt  scalability_test.py
test/: dune
