(rule
 (targets game_t.ml game_t.mli)
 (deps game.atd)
 (mode fallback)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets game_j.ml game_j.mli)
 (deps game.atd)
 (mode fallback)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets message_t.ml message_t.mli)
 (deps message.atd)
 (mode fallback)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets message_j.ml message_j.mli)
 (deps message.atd)
 (mode fallback)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets theme_t.ml theme_t.mli)
 (deps theme.atd)
 (mode fallback)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets theme_j.ml theme_j.mli)
 (deps theme.atd)
 (mode fallback)
 (action
  (run atdgen -j %{deps})))

(library
 (name zamlbie)
 (modules
  effects
  server
  client
  ws_client
  rest_client
  client_arg
  config
  game
  game_j
  game_t
  match
  message
  message_j
  message_t
  world
  theme
  theme_j
  theme_t
  uuid)
 (libraries
  websocket-lwt-unix
  base
  notty
  notty.unix
  notty.lwt
  lwt.unix
  dream
  atdgen)
 (preprocess
  (pps lwt_ppx)))
